# jack

./: .env-template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/: CHANGELOG
.github/workflows/: contain_me.yml
.nova/: Configuration.json
archive/: 5151f05a7bb9_added_last_login_field_to_user_model.py  d224345774ba_improve_table_structure.py
archive/migrationsyyy/: env.py
archive/migrationsyyy/versions/: dac1c6b2464f_added_voter_data_tables.py
docs/: Docker.md  README.md  Search.md  db.md
migrations/versions/: 43f13098f2a3_initial_table_structure.py  692fc097b07f_values_connections.py  984a4bba6bb3_signatures.py  c70e2c681e18_search.py  dac1c6b2464f_added_voter_data_tables.py
so_well/: __init__.py  app.py  middleware.py  models.py
so_well/advanced_search/: routes.py
so_well/batches/: __init__.py  models.py  routes.py
so_well/print/: __init__.py  routes.py
so_well/search/: __init__.py  routes.py  utils.py
so_well/sheets/: __init__.py  models.py  routes.py
so_well/signatures/: __init__.py  models.py  routes.py
so_well/static/css/: batches.css  entry.css  global.css  home.css  print.css  sheets.css  sheets_lookup.css
so_well/static/js/: batches.js  entry.js  home.js  print.js  sheets.js
so_well/static/js/modules/: directionOptions.js  filterCounts.js  search.js  stateOptions.js  (+1 more)
so_well/templates/: batches.html  entry.html  error.html  footer.html  header.html  index.html  print.html  search.html  sheet_lookup.html  sheets.html
so_well/utils/: __init__.py  loader.py  logging.py  validator.py
