[tool.poetry]
name = "jack"
version = "0.1.0"
description = "Manages the important things, like ballot access"
authors = ["Bentley Hensel <bentleyhensel@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
sqlalchemy-utils = "^0.41.2"
psycopg2 = "^2.9.9"
flask-login = "^0.6.3"
jwt = "^1.3.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
